--- a/Level 1/Restaurant_analysis.ipynb
+++ b/Level 1/Restaurant_analysis.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOA8HEwJA+GaVN3bhXBN0RQ",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyOA8HEwJA+GaVN3bhXBN0RQ"
     },
     "kernelspec": {
       "name": "python3",
@@ -17,16 +16,6 @@
     }
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Ansu-Devog/Data-analysis-Internship-Cognifyz-/blob/main/Restaurant_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
@@ -190,7 +179,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "M8Vqi-pPk-HR"
       },
@@ -234,7 +223,7 @@
         "id": "3jXtkXtuFqHN",
         "outputId": "7d2f1d9f-19f0-44a2-d8a5-cf297526af03"
       },
-      "execution_count": 19,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -274,7 +263,7 @@
         "id": "KltYyyDVOKVT",
         "outputId": "cf29e482-ad94-4729-b942-0be9b13be6f6"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -745,7 +734,7 @@
         "id": "aleL6O5EOoZY",
         "outputId": "0a2fcb6e-30aa-4e55-9402-6637223fd223"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -804,7 +793,7 @@
         "id": "mTUVB9anRciS",
         "outputId": "2ca52089-3024-4587-ddef-840c0872b3be"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -867,7 +856,7 @@
         "id": "UPxa6P7PRi3K",
         "outputId": "8a440022-775f-4a18-b8d5-86cfad9a52a7"
       },
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -900,7 +889,7 @@
       "metadata": {
         "id": "SZeKs4iWSCRM"
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -917,7 +906,7 @@
         "id": "1STsQcrfSFbK",
         "outputId": "34f72907-d2af-44ce-8fd6-613bdcf8460a"
       },
-      "execution_count": 27,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -982,7 +971,7 @@
         "id": "pWf_DU3ZSgqy",
         "outputId": "86e757b1-51e8-4d8f-c4dc-c3b43e2dbdb4"
       },
-      "execution_count": 28,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1053,7 +1042,7 @@
         "id": "uuRST3eNS8ww",
         "outputId": "729a462c-0217-4b6b-bed6-16e902ebf55d"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1158,7 +1147,7 @@
         "id": "WuBTYchIWO9D",
         "outputId": "13f9d127-3be7-4242-c823-c4e570d9e85b"
       },
-      "execution_count": 30,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1264,7 +1253,7 @@
         "id": "7WU7ByK7W7dm",
         "outputId": "3673b04e-c824-4397-a816-ebfd6f3804fa"
       },
-      "execution_count": 32,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1305,7 +1294,7 @@
         "id": "ybkusuKNXQ7u",
         "outputId": "cf96e130-98e0-4340-a4b0-b66181e1205b"
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1372,7 +1361,7 @@
         "id": "BmQqmIufX_Gp",
         "outputId": "7a89d248-f951-4a86-97c0-ad30e50214bd"
       },
-      "execution_count": 35,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1412,7 +1401,7 @@
         "id": "jZV8YHe4YDCz",
         "outputId": "ab6d87ad-27d7-409d-b9d7-a339b858e185"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1507,7 +1496,7 @@
         "id": "mnr0OlnZc51v",
         "outputId": "4bae66d6-2263-4ed0-c5bc-df0f019f89f7"
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1557,7 +1546,7 @@
         "id": "k3VeX0GMdLpK",
         "outputId": "d9e05666-6cff-4662-c171-812499c1918a"
       },
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1607,7 +1596,7 @@
         "id": "L5zz4MD9eoVj",
         "outputId": "315f2d33-a251-4bea-8ed0-a85d979c2962"
       },
-      "execution_count": 38,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
