--- a/Level 2/Restaurant_Insights.ipynb
+++ b/Level 2/Restaurant_Insights.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyNUjsLIqGzZI11ZduCKmlE+",
+      "authorship_tag": "ABX9TyOLnW0cqZgkgainX9vdz46x",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -42,7 +42,7 @@
         "##### **Project Type**    - EDA\n",
         "##### **Industry**    - Cognifyz Technologies\n",
         "##### **Contribution**    - Individual\n",
-        "##### **Member Name -** Arindam Paul\n",
+        "##### **Member Name -** Ansuman Samanta\n",
         "##### **Level -** 2"
       ],
       "metadata": {
@@ -187,17 +187,8 @@
       "metadata": {
         "id": "1dzHbiDho3OO"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
-        "## Dataset Load"
-      ],
-      "metadata": {
-        "id": "ogQwVrPtpAV2"
-      }
     },
     {
       "cell_type": "code",
@@ -208,8 +199,48 @@
       "metadata": {
         "id": "Sp-ZcIrHpFv-"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "!wget https://raw.githubusercontent.com/Ansu-Devog/Data-analysis-Internship-Cognifyz-/main/Dataset .csv\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_k9zbgb-62LW",
+        "outputId": "e0a91136-d1d0-4fb2-9477-4d8c1d20edce"
+      },
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "--2024-05-23 03:51:53--  https://raw.githubusercontent.com/Ansu-Devog/Data-analysis-Internship-Cognifyz-/main/Dataset\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.111.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
+            "HTTP request sent, awaiting response... 404 Not Found\n",
+            "2024-05-23 03:51:53 ERROR 404: Not Found.\n",
+            "\n",
+            "--2024-05-23 03:51:53--  http://.csv/\n",
+            "Resolving .csv (.csv)... failed: Name or service not known.\n",
+            "wget: unable to resolve host address ‘.csv’\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "## Dataset Load"
+      ],
+      "metadata": {
+        "id": "ogQwVrPtpAV2"
+      }
     },
     {
       "cell_type": "markdown",
@@ -237,23 +268,19 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 222
+          "base_uri": "https://localhost:8080/"
         },
         "id": "IETsw9M_zWvT",
-        "outputId": "4ca6f331-9c81-4a99-bf4c-8f71cfe8d33d"
+        "outputId": "a6bf531e-40c5-4952-cd32-7a523be17cbe"
       },
-      "execution_count": 15,
+      "execution_count": 9,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'df' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-15-3cd8f613a995>\u001b[0m in \u001b[0;36m<cell line: 3>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Percentage of restaurants offering table booking and online delivery\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Total number of restaurants\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mtotal_restaurants\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Percentage calculation\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Percentage of restaurants offering Table Booking: 12.12%\n",
+            "Percentage of restaurants offering Online Delivery: 25.66%\n"
           ]
         }
       ]
@@ -280,23 +307,19 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 222
+          "base_uri": "https://localhost:8080/"
         },
         "id": "9G1_-TMP0aoL",
-        "outputId": "75f354ed-b2f7-4b32-e9c1-715f3aa98908"
+        "outputId": "4b0b89e7-c8ee-48ba-ceb1-78bf6202d987"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "NameError",
-          "evalue": "name 'df' is not defined",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-10-9b37f846a3d9>\u001b[0m in \u001b[0;36m<cell line: 2>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;31m# Compare average ratings of restaurants with and without table booking\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0mavg_rating_with_table\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Has Table booking'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'Yes'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Aggregate rating'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0mavg_rating_without_table\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mdf\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Has Table booking'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0;34m'No'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Aggregate rating'\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mmean\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;31m# Display results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;31mNameError\u001b[0m: name 'df' is not defined"
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Average rating with Table Booking: 3.44\n",
+            "Average rating without Table Booking: 2.56\n"
           ]
         }
       ]
@@ -323,10 +346,27 @@
         "print(online_delivery_by_price_range)"
       ],
       "metadata": {
-        "id": "rrF0RtcE0kuF"
+        "id": "rrF0RtcE0kuF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "1a0ac752-cd63-4ee6-bb90-158bdefbbc3c"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 11,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Online Delivery Availability by Price Range:\n",
+            "Has Online delivery         No       Yes\n",
+            "Average Cost for two                    \n",
+            "High                  0.719149  0.280851\n",
+            "Low                   0.858523  0.141477\n",
+            "Medium                0.566209  0.433791\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "markdown",
