--- a/Level 1/Restaurant_analysis.ipynb
+++ b/Level 1/Restaurant_analysis.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOA8HEwJA+GaVN3bhXBN0RQ"
+      "authorship_tag": "ABX9TyPLVSFp7dgN/iYoceyd8C+a",
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,8 +19,18 @@
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
       "source": [
-        "## **Project Name - Restaurant_Analysis_Level_1**"
+        "<a href=\"https://colab.research.google.com/github/Ansu-Devog/Data-analysis-Internship-Cognifyz-/blob/main/Level%201/Restaurant_analysis.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# **Project Name - Restaurant_Analysis**"
       ],
       "metadata": {
         "id": "4Y1wXv73y35q"
@@ -28,7 +39,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "##### **Project Type**   - EDA\n",
+        "\n",
         "##### **Industry**    - Cognifyz Technologies\n",
         "##### **Contribution**    - Individual\n",
         "##### **Member Name -** Ansuman Samanta\n",
@@ -179,7 +190,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 3,
       "metadata": {
         "id": "M8Vqi-pPk-HR"
       },
@@ -212,32 +223,14 @@
     {
       "cell_type": "code",
       "source": [
-        "# prompt: load dataset from github repository\n",
-        "\n",
-        "!wget https://raw.githubusercontent.com/Ansu-Devog/Data-analysis-Internship-Cognifyz-/fe3324a3ccefa18b991af39883ad5bf1b35b01a4/Level%201/Restaurant_data.csv\n"
+        "# Load Dataset from github repository\n",
+        "df = pd.read_csv(\"https://raw.githubusercontent.com/Ansu-Devog/Data-analysis-Internship-Cognifyz-/main/Dataset.csv\")"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "id": "3jXtkXtuFqHN",
-        "outputId": "7d2f1d9f-19f0-44a2-d8a5-cf297526af03"
+        "id": "qf3p1oeypVVf"
       },
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "--2024-05-21 17:33:54--  https://raw.githubusercontent.com/Ansu-Devog/Data-analysis-Internship-Cognifyz-/fe3324a3ccefa18b991af39883ad5bf1b35b01a4/Level%201/Restaurant_data.csv\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
-            "HTTP request sent, awaiting response... 404 Not Found\n",
-            "2024-05-21 17:33:54 ERROR 404: Not Found.\n",
-            "\n"
-          ]
-        }
-      ]
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
